# CommonModule

./: CMakeLists.txt  ClionFormat.xml  GitHub_Dark_High_Contrast.icls  README.md
module/Communicator/: CMakeLists.txt
module/Communicator/include/: Communicator.hpp  CommunicatorFactory.hpp  SerialPort.hpp  Tcp.hpp  Udp.hpp
module/Communicator/source/: CommunicatorFactory.cpp  SerialPort.cpp  Tcp.cpp  Udp.cpp
module/Curl/: CMakeLists.txt
module/Curl/bak/: CurlOption.hpp
module/Curl/bak/bak1/: CurlOption.hpp
module/Curl/bak/bak2/: Curl.hpp  CurlCallBackFunc.hpp  CurlHeaderList.hpp  CurlInitFlags.hpp  CurlOption.hpp  CurlUniqueInit.hpp
module/Curl/include/: Curl.hpp  CurlCallBackFunc.hpp  CurlCallBackFunction.hpp  CurlHeaderList.hpp  CurlInitFlags.hpp  CurlOption.hpp  CurlUniqueInit.hpp
module/Curl/source/: Curl.cpp
module/Curl/uml/: Curl.puml
module/FunctionTraits/: CMakeLists.txt
module/FunctionTraits/include/: FunctionTraits.hpp
module/FunctionTraits/source/: FunctionTraits.cpp
module/MetaFunction/: CMakeLists.txt
module/MetaFunction/include/: MetaFunction.hpp
module/OverloadLambda/: CMakeLists.txt
module/OverloadLambda/include/: OverloadLambda.hpp
module/OverloadLambda/source/: OverloadLambda.cpp
module/Span/: CMakeLists.txt
module/Span/bak/ver1/: Span.hpp
module/Span/include/: Span.hpp  SpanImplByBoost.hpp  SpanImplBySTD.hpp
module/Span/source/: Span.cpp  SpanDemo_C17.cpp
source/: main.cpp
source/bak/: main.cpp
